<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">NFCSocketMAMExample</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="start_server">Start RECEIVE</string>
	<string name="stop_server">Stop RECEIVE</string>
	<string name="receive_text">Message</string>
	<string name="hint">Type in Message</string>
	<string name="send">send</string>
</resources>
