<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.mam.nfc.MainActivity">

	<Button
			android:id="@+id/startserver"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/start_server"/>

	<Button
			android:id="@+id/stopserver"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/startserver"
			android:text="@string/stop_server"/>

	<TextView
			android:id="@+id/text"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@+id/stopserver"
			android:text="@string/receive_text"/>

	<EditText
			android:id="@+id/message"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:hint="@string/hint"/>

	<Button
			android:id="@+id/send"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_toRightOf="@+id/message"
			android:text="@string/send"/>

</RelativeLayout>